--- a/tools/mtd-utils/Makefile
+++ b/tools/mtd-utils/Makefile
@@ -29,6 +29,9 @@ ifneq ($(HOST_OS),Linux)
 	-include fls.h
 endif
 
+HOST_CONFIGURE_VARS+= \
+	UUID_CFLAGS="-I$(STAGING_DIR_HOST)/include/e2fsprogs/uuid"
+
 HOST_CONFIGURE_ARGS+= \
 	--without-tests \
 	--without-crypto \
